[bug 990776] Fix word wrapping in response descriptions

--- a/fjord/base/static/css/fjord.less
+++ b/fjord/base/static/css/fjord.less
@@ -284,7 +284,7 @@ header {
       font-size: 14px;
       line-height: 18px;
       word-wrap: break-word;
-      word-break: break-all;
+      word-break: normal;
       white-space: normal;
     }
 
